<resources>
    <string name="app_name">Ecommerce shop</string>
    <string name="SplashTitle">Shoppolandia</string>
    <string name="logowanie">Logowanie</string>
    <string name="e_mail">E-mail</string>
    <string name="haslo">Hasło</string>
    <string name="zaloguj_sie">Zaloguj się</string>
    <string name="nie_pami_tam_has_a"><u>Nie pamiętam hasła</u></string>
    <string name="brak_konta_">Brak konta? <u>Kliknij i stwórz konto</u></string>
    <string name="rejestracja">Rejestracja</string>
    <string name="imi_i_nazwisko">Imię i nazwisko</string>
    <string name="potwierd_has_o">Potwierdź hasło</string>
    <string name="zarejestruj_si">Zarejestruj się</string>
    <string name="posiadasz_konto_zaloguj_si">Posiadasz konto? <u>Zaloguj się</u></string>
    <string name="prosz_czeka">Proszę czekać</string>
    <string name="odzyskiwanie_has_a">Odzyskiwanie hasła</string>
    <string name="wy_lij">Wyślij</string>
    <string name="profil">Profil</string>
    <string name="numer_telefonu">Numer telefonu</string>
    <string name="zapisz">Zapisz</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Strona główna</string>
    <string name="title_products">Produkty</string>
    <string name="title_orders">Zamówienia</string>
    <string name="double_click">Naciśnij ponownie aby wyjść</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="title_settings">Ustawienia</string>
    <string name="lbl_edit">Edytuj</string>
    <string name="lbl_addresses">Adresy</string>
    <string name="btn_lbl_logout">Wyloguj</string>
    <string name="dodaj_produkt">Dodaj produkt</string>
    <string name="nazwa_produktu">Nazwa produktu</string>
    <string name="cena">Cena</string>
    <string name="ilosc">Ilość</string>
    <string name="opis">Opis</string>
    <string name="error_loading_image">Nie udało się załadować zdjęcia</string>
    <string name="no_product_image">Nie wybrano zdjęcia</string>
    <string name="no_product_name">Proszę wprowadzić nazwę produktu</string>
    <string name="no_product_price">Proszę wprowadzić cenę produktu</string>
    <string name="no_product_amount">Proszę wprowadzić ilość produktu</string>
    <string name="no_product_description">Proszę wprowadzić opis produktu</string>
    <string name="permission_denied">Odmówiono pozwolenia</string>
    <string name="no_phone_number">Prosze wprowadzić numer telefonu</string>
    <string name="profile_updated">Profil zaktualizowany</string>
    <string name="product_added">Produkt dodany</string>
    <string name="no_added_products">Brak dodanych produktów</string>

    <string name="no_items_home">Brak pozycji</string>
    <string name="delete_product_dialog_title">Usuwanie produktu</string>
    <string name="delete_product_dialog_message">Czy na pewno usunąć produkt?</string>
    <string name="yes">Tak</string>
    <string name="product_deleted">Produkt został usunięty</string>
    <string name="product_details_title">Szczegóły</string>
    <string name="product_description">Opis produktu</string>
    <string name="product_amount">Ilość</string>\
    <string name="add_to_cart">Dodaj do koszyka</string>
    <string name="add_to_cart_success">Dodano do koszyka</string>
    <string name="go_to_cart">Idź do koszyka</string>
    <string name="my_cart">Koszyk</string>
    <string name="cart_empty">Koszyk jest pusty</string>
    <string name="item_price">Cena:</string>
    <string name="total_charge">Do zapłaty:</string>
    <string name="shipping_charge">Wysyłka:</string>
    <string name="pay_and_buy">Kupuję i płacę</string>
    <string name="action_cart">Koszyk</string>
    <string name="out_of_stock">Brak w magazynie</string>
    <string name="item_removed_success">Usunięto pozycję</string>
    <string name="title_address_list">ADRESY</string>
    <string name="no_address_found">Brak dodanych adresów</string>
    <string name="lbL_add_address">Dodaj adres</string>
    <string name="title_add_address">Dodaj adres</string>
    <string name="hint_full_name">Imię i nazwisko</string>
    <string name="hint_phone_number">Numer telefonu</string>
    <string name="hint_address">Adres</string>
    <string name="hint_zip_code">Kod pocztowy</string>
    <string name="hint_additional_note">Dodatkowe informacje</string>
    <string name="lbl_home">Dom</string>
    <string name="lbl_office">Biuro</string>
    <string name="lbl_other">Inne</string>
    <string name="btn_lbl_submit">Dodaj adres</string>
    <string name="please_enter_full_name">Proszę wprowadzić imię i nazwisko</string>
    <string name="please_enter_phone_number">Proszę wprowadzić numer telefonu</string>
    <string name="please_enter_address">Proszę wprowadzić adres</string>
    <string name="please_enter_zip_code">Prosze wprowadzić kod pocztowy</string>
    <string name="address_add_success">Dodano adres</string>
    <string name="edit_address">Edytuj adres</string>
    <string name="update_adress">Zaktualizuj adres</string>
    <string name="address_edit_success">Adres zaktualizowany pomyślnie</string>
    <string name="address_delete_success">Adres usunięty pomyślnie</string>
    <string name="select_address">Wybierz adres</string>

    <string name="title_checkout">Zamówienie</string>
    <string name="checkout_lbl_product_items">Produkty</string>
    <string name="checkout_lbl_selected_address">Wybrany adres</string>
    <string name="checkout_lbl_items_receipt">Paragon</string>
    <string name="lbl_payment_mode">Metoda płatności</string>
    <string name="lbl_cash_on_delivery">Przy odbiorze</string>
    <string name="btn_lbl_place_order">Zamawiam</string>
    <string name="place_order_success">Zamówienie złożone pomyślnie</string>
    <string name="no_order_placed">Brak złożonych zamówień</string>
    <string name="order_details">Szczegóły zamówienia</string>
    <string name="order_number">Numer zamówienia</string>
    <string name="order_date">Data zamówienia</string>
    <string name="order_status">Status zamówienia</string>
    <string name="order_shipping_address">Adres</string>
    <string name="order_received">Przyjęte</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sold_products">Sprzedane produkty</string>
    <string name="no_products_sold_yet">Brak sprzedanych produktów</string>


</resources>