<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg2"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <com.rafalropel.ecommerceshop.utils.TextViewBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/rejestracja"
        android:textColor="@color/PrimaryText"
        android:textSize="@dimen/splash_text_size" />

    <com.rafalropel.ecommerceshop.utils.CustomEditText
        android:id="@+id/et_register_namesurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/imi_i_nazwisko"
        android:textSize="20sp" />

    <com.rafalropel.ecommerceshop.utils.CustomEditText
        android:id="@+id/et_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/e_mail"
        android:textSize="20sp" />

    <com.rafalropel.ecommerceshop.utils.CustomEditText
        android:id="@+id/et_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/haslo"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <com.rafalropel.ecommerceshop.utils.CustomEditText
        android:id="@+id/et_register_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/potwierd_has_o"
        android:inputType="textPassword"
        android:textSize="20sp" />


    <com.rafalropel.ecommerceshop.utils.CustomButton
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/button_bg"
        android:text="@string/zarejestruj_si"
        android:textColor="@color/white" />


    <com.rafalropel.ecommerceshop.utils.TextViewBold
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/posiadasz_konto_zaloguj_si"
        android:textColor="@color/PrimaryText"
        android:textSize="18sp" />

</LinearLayout>