<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhite"
    tools:context=".OrderDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_my_order_details_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/order_details"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_my_order_details_activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.rafalropel.ecommerceshop.utils.TextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/my_order_details_content_marginStartEnd"
                android:layout_marginTop="@dimen/my_order_details_content_marginTopBottom"
                android:layout_marginEnd="@dimen/my_order_details_content_marginStartEnd"
                android:paddingTop="@dimen/my_order_details_content_lbl_padding"
                android:paddingBottom="@dimen/my_order_details_content_lbl_padding"
                android:text="@string/order_details"
                android:textColor="@color/SecondaryText"
                android:textSize="@dimen/my_order_details_lbl_textSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingStart="@dimen/my_order_details_content_paddingStartEnd"
                android:paddingTop="@dimen/my_order_details_content_paddingTopBottom"
                android:paddingEnd="@dimen/my_order_details_content_paddingStartEnd"
                android:paddingBottom="@dimen/my_order_details_content_paddingTopBottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.rafalropel.ecommerceshop.utils.TextViewBold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/order_number"
                        android:textColor="@color/darkGrey"
                        android:textSize="@dimen/my_order_details_label_value_textSize" />

                    <com.rafalropel.ecommerceshop.utils.TextViewBold
                        android:id="@+id/tv_order_details_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/SecondaryText"
                        android:textSize="@dimen/my_order_details_label_value_textSize"
                        tools:text="123456" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.rafalropel.ecommerceshop.utils.TextViewBold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/order_date"
                        android:textColor="@color/darkGrey"
                        android:textSize="@dimen/my_order_details_label_value_textSize" />

                    <com.rafalropel.ecommerceshop.utils.TextViewBold
                        android:id="@+id/tv_order_details_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/SecondaryText"
                        android:textSize="@dimen/my_order_details_label_value_textSize"
                        tools:text="07 03 2022" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.rafalropel.ecommerceshop.utils.TextViewBold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/order_status"
                        android:textColor="@color/darkGrey"
                        android:textSize="@dimen/my_order_details_label_value_textSize" />

                    <com.rafalropel.ecommerceshop.utils.TextViewBold
                        android:id="@+id/tv_order_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Zrealizowane"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/my_order_details_label_value_textSize" />
                </LinearLayout>
            </LinearLayout>

            <com.rafalropel.ecommerceshop.utils.TextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/my_order_details_content_marginStartEnd"
                android:layout_marginTop="@dimen/my_order_details_content_marginTopBottom"
                android:layout_marginEnd="@dimen/my_order_details_content_marginStartEnd"
                android:paddingTop="@dimen/my_order_details_content_lbl_padding"
                android:paddingBottom="@dimen/my_order_details_content_lbl_padding"
                android:text="@string/checkout_lbl_product_items"
                android:textColor="@color/SecondaryText"
                android:textSize="@dimen/my_order_details_lbl_textSize" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_my_order_items_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.rafalropel.ecommerceshop.utils.TextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/my_order_details_content_marginStartEnd"
                android:layout_marginTop="@dimen/my_order_details_content_marginTopBottom"
                android:layout_marginEnd="@dimen/my_order_details_content_marginStartEnd"
                android:layout_marginBottom="@dimen/my_order_details_content_marginTopBottom"
                android:paddingTop="@dimen/my_order_details_content_lbl_padding"
                android:paddingBottom="@dimen/my_order_details_content_lbl_padding"
                android:text="@string/order_shipping_address"
                android:textColor="@color/SecondaryText"
                android:textSize="@dimen/my_order_details_lbl_textSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingStart="@dimen/my_order_details_content_paddingStartEnd"
                android:paddingTop="@dimen/my_order_details_content_paddingTopBottom"
                android:paddingEnd="@dimen/my_order_details_content_paddingStartEnd"
                android:paddingBottom="@dimen/my_order_details_content_paddingTopBottom">

                <com.rafalropel.ecommerceshop.utils.TextViewBold
                    android:id="@+id/tv_my_order_details_address_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/address_details_marginTop"
                    android:paddingBottom="@dimen/address_details_marginTop"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/address_details_textSize"
                    android:textStyle="bold"
                    tools:text="Dom" />

                <com.rafalropel.ecommerceshop.utils.TextViewBold
                    android:id="@+id/tv_my_order_details_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/item_address_name_textSize"
                    tools:text="Rafal Ropel" />

                <com.rafalropel.ecommerceshop.utils.TextViewBold
                    android:id="@+id/tv_my_order_details_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/address_details_marginTop"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/address_details_textSize"
                    tools:text="XYZ" />

                <com.rafalropel.ecommerceshop.utils.TextViewBold
                    android:id="@+id/tv_my_order_details_additional_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/address_details_marginTop"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/address_details_textSize"
                    tools:text="XYZ" />

                <com.rafalropel.ecommerceshop.utils.TextViewBold
                    android:id="@+id/tv_my_order_details_other_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/address_details_marginTop"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/address_details_textSize"
                    tools:text="XYZ" />

                <com.rafalropel.ecommerceshop.utils.TextViewBold
                    android:id="@+id/tv_my_order_details_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/address_details_marginTop"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/address_details_textSize"
                    tools:text="45543249" />
            </LinearLayout>

            <com.rafalropel.ecommerceshop.utils.TextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/my_order_details_content_marginStartEnd"
                android:layout_marginTop="@dimen/my_order_details_content_marginTopBottom"
                android:layout_marginEnd="@dimen/my_order_details_content_marginStartEnd"
                android:layout_marginBottom="@dimen/my_order_details_content_marginTopBottom"
                android:paddingTop="@dimen/my_order_details_content_lbl_padding"
                android:paddingBottom="@dimen/my_order_details_content_lbl_padding"
                android:text="@string/checkout_lbl_items_receipt"
                android:textColor="@color/SecondaryText"
                android:textSize="@dimen/my_order_details_lbl_textSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/my_order_details_items_receipt">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.rafalropel.ecommerceshop.utils.TextViewBold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/item_price"
                        android:textColor="@color/darkGrey"
                        android:textSize="@dimen/my_order_details_label_value_textSize" />

                    <com.rafalropel.ecommerceshop.utils.TextViewBold
                        android:id="@+id/tv_order_details_sub_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/SecondaryText"
                        android:textSize="@dimen/my_order_details_label_value_textSize"
                        tools:text="100" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.rafalropel.ecommerceshop.utils.TextViewBold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/shipping_charge"
                        android:textColor="@color/darkGrey"
                        android:textSize="@dimen/my_order_details_label_value_textSize" />

                    <com.rafalropel.ecommerceshop.utils.TextViewBold
                        android:id="@+id/tv_order_details_shipping_charge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/SecondaryText"
                        android:textSize="@dimen/my_order_details_label_value_textSize"
                        tools:text="$10.0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.rafalropel.ecommerceshop.utils.TextViewBold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total_charge"
                        android:textColor="@color/darkGrey"
                        android:textSize="@dimen/my_order_details_label_value_textSize" />

                    <com.rafalropel.ecommerceshop.utils.TextViewBold
                        android:id="@+id/tv_order_details_total_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/darkGrey"
                        android:textSize="@dimen/my_order_details_label_value_textSize"
                        tools:text="$110" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/my_order_details_content_marginTopBottom"
                android:layout_marginBottom="@dimen/my_order_details_content_marginTopBottom"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/my_order_details_content_lbl_padding"
                android:paddingBottom="@dimen/my_order_details_content_lbl_padding">

                <com.rafalropel.ecommerceshop.utils.TextViewBold
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/my_order_details_content_marginStartEnd"
                    android:layout_weight="1"
                    android:text="@string/lbl_payment_mode"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/lbl_order_details_textSize" />

                <com.rafalropel.ecommerceshop.utils.TextViewBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/my_order_details_content_marginStartEnd"
                    android:text="@string/lbl_cash_on_delivery"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/lbl_order_details_textSize" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>